<resources>
    <string name="app_name">Birthdays Master</string>
    <string name="developer_name">Hlayan Htet Aung</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="years">Years</string>
    <string name="months">Months</string>
    <string name="weeks">Weeks</string>
    <string name="days">Days</string>
    <string name="name">Name</string>
    <string name="RemainingNextBirthday">Remaining Birthday</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="extra">Extra</string>
    <string name="total_years">Total Years</string>
    <string name="total_months">Total Months</string>
    <string name="total_weeks">Total Weeks</string>
    <string name="total_days">Total Days</string>
    <string name="total_hours">Total Hours</string>
    <string name="total_minutes">Total Minutes</string>
    <string name="total_seconds">Total Seconds</string>
    <string name="delete_item">Are you sure?</string>
    <string name="delete_all_item">It will delete all your data. You will not able to undone.</string>
    <string name="about_developer">CONTACT ME</string>
    <string name="email">Email</string>
    <string name="sorting">Sort By</string>
    <string name="searching">Search</string>
    <string name="click_to_add_items">There is no any person</string>
    <string name="calculate">Calculate</string>
    <string name="upcoming_birthday">Upcoming Birthday</string>
    <string name="current_age">Current Age</string>
    <string name="add_person">Add Person</string>
    <string name="compare_person">Compare Persons</string>
    <string name="difference">Difference</string>
    <string name="result">Result</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="warning_text">This process cannot be undone.</string>
    <string name="delete_everything">Delete Everything</string>
    <string name="clear">clear</string>
    <string name="confirm">Confirm</string>
    <string name="dismiss">Dismiss</string>
    <string name="view_as">VIEW AS</string>
    <string name="update">Update</string>
    <string name="themes">THEMES</string>
    <string name="app_theme">App Theme</string>
    <string name="month">MONTHS</string>
    <string name="WEEKS">WEEKS</string>
    <string name="DAYS">DAYS</string>
    <string name="developed_by">developed by</string>
    <string name="_00">00</string>
    <string name="leap">LEAP</string>
    <string name="same">SAME</string>
    <string name="sign">SIGN</string>
    <string name="ok">ok</string>

    <string name="t1">1</string>
    <string name="t2">2</string>
    <string name="t3">3</string>
    <string name="t4">4</string>
    <string name="t5">5</string>
    <string name="t6">6</string>
    <string name="t7">7</string>
    <string name="t8">8</string>
    <string name="t9">9</string>
    <string name="t_clear">CLEAR</string>
    <string name="t0">0</string>
    <string name="t_del">DELETE</string>
    <string name="not_Leap_year">0 is a Leap Year.</string>
    <string name="leap_checking">Leap Checking</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="working_experience">Working Experience</string>
    <string name="experience">Experience</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="person_one">Person One</string>
    <string name="person_two">Person Two</string>
</resources>
