<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="20sp"
    android:layout_marginVertical="10dp"
    android:layout_weight="1"
    android:orientation="horizontal">

    <Button
        style="@style/buttonYesNo"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/ripple_effect_for_negative"
        android:onClick="onClickMinus"
        android:text="@string/minus"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/leapYearNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="5"
        android:gravity="center"
        android:text="@string/t0"
        android:textColor="?attr/colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        style="@style/buttonYesNo"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/ripple_effect_for_negative"
        android:onClick="onClickPlus"
        android:text="@string/plus"
        android:textSize="30sp" />

</LinearLayout>